--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+    
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-
+  google_nav_bar: ^5.0.7
+  bloc: ^9.0.0
+  flutter_bloc: ^9.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
